--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta property="og:image" content="/img/WhatsApp Image 2024-01-24 at 20.53.55.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -59,7 +59,7 @@
     <section class="about" id="work">
         <div class="main container">
             <div class="about-img">
-                <img src="/img/WhatsApp Image 2024-01-24 at 20.53.55.jpeg" alt="">
+                <img src="./img/ Image 2024-01-24 at 20.53.55.jpeg" alt="">
             </div>
             <div class="about-text">
                 <h2>About ME</h2>
