--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="about" id="work">
         <div class="main container">
             <div class="about-img">
-                <img src="./img/ Image 2024-01-24 at 20.53.55.jpeg" alt="">
+                <img src="img/WhatsApp Image 2024-01-24 at 20.53.55.jpeg" alt="">
             </div>
             <div class="about-text">
                 <h2>About ME</h2>
