--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
 
-    <section class="showcase-area" id="home">
+    <section class="showcase-area" id="home" style="background-image: url(img/bg1.jpeg);">
         <div class=" showcase-container container">
 
             <div class=" showcase-div1 ">
