--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
            
             <ul class="menu-list">
-                <a href="#home"><li>Home</li></a>
+                <a href="#home" ><li>Home</li></a>
                 <a href="#work"><li>About</li></a>
                 <a href="#Service"><li>Services</li></a>
-                <!-- <li><a href="#project">Skill</a></li> -->
                 <a href="#ContactUs"><li>Contact</li></a>
             </ul>
 
-            <div class="humbarger">
+            <div class="hamburger">
                 <div class="bar"></div>
+                <div class="bar2 bar"></div> 
                 <div class="bar2 bar"></div> 
                </div>
         </nav>
@@ -90,7 +90,7 @@
                 <i class=" fas fa-user"></i>
                 <h5>Web Development</h5>
                 <div class="para">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione iste deserunt cum magni
+                    <p>Lorem dolor sit amet consectetur adipisicing elit. Ratione iste deserunt cum magni
                         recusandae laboriosam.</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
@@ -147,7 +147,7 @@
        document.addEventListener('DOMContentLoaded', function () {
 
 // Hamburger Toggle
-var hamburger = document.querySelector('.humbarger');
+var hamburger = document.querySelector('.hamburger');
 var menuList = document.querySelector('.menu-list');
 
 if (hamburger) {
